--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "dependencies": {
     "axios": "^1.6.0"
+  },
+  "scripts": {
+    "dev": "vercel dev",
+    "build": "vercel build"
   }
 }
